--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,7 @@
 @import './layout/comment';
 @import './layout/team';
 @import './layout/master';
+@import './layout/youtub';
+@import './layout/quality';
+@import './layout/faq';
+@import './layout/footer';
