--- a/sass/util/_global.scss
+++ b/sass/util/_global.scss
@@ -162,11 +162,18 @@
         font-size: 42px;
         line-height: 49px;
     }
+    body::before{
+        content: 'middle';
+        visibility: hidden;
+    }
 }
 
 @media screen and (min-width:1440px){
     .wrapper{
         max-width:1200px;
         position: relative;
+    }
+    body::before{
+        content: 'large';
     }
 }
