--- a/sass/util/_global.scss
+++ b/sass/util/_global.scss
@@ -154,6 +154,7 @@
 .menu-mobile-active{
     position: relative;
     overflow: hidden;
+    height: 200%;
     &::before{
         display: block;
         content: '';
