--- a/sass/main.css
+++ b/sass/main.css
@@ -174,6 +174,7 @@ input:focus {
 .menu-mobile-active {
   position: relative;
   overflow: hidden;
+  height: 200%;
 }
 .menu-mobile-active::before {
   display: block;
