--- a/sass/main.css
+++ b/sass/main.css
@@ -174,7 +174,7 @@ input:focus {
 .menu-mobile-active {
   position: relative;
   overflow: hidden;
-  height: 200%;
+  min-height: 100%;
 }
 .menu-mobile-active::before {
   display: block;
@@ -182,8 +182,9 @@ input:focus {
   position: absolute;
   left: 0;
   top: 0;
+  bottom: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background: rgba(32, 10, 10, 0.55);
   z-index: 1000;
 }
