--- a/sass/util/_global.scss
+++ b/sass/util/_global.scss
@@ -154,15 +154,16 @@
 .menu-mobile-active{
     position: relative;
     overflow: hidden;
-    height: 200%;
+    min-height: 100%;
     &::before{
         display: block;
         content: '';
         position: absolute;
         left: 0;
         top: 0;
+        bottom: 0;
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         background: rgba(32, 10, 10, 0.55);
         z-index: 1000;
     }
