--- a/sass/main.css
+++ b/sass/main.css
@@ -185,6 +185,7 @@ input:focus {
   bottom: 0;
   width: 100%;
   min-height: 100%;
+  height: -150vh;
   background: rgba(32, 10, 10, 0.55);
   z-index: 1000;
 }
