--- a/sass/util/_global.scss
+++ b/sass/util/_global.scss
@@ -164,6 +164,7 @@
         bottom: 0;
         width: 100%;
         min-height: 100%;
+        height: -150vh;
         background: rgba(32, 10, 10, 0.55);
         z-index: 1000;
     }
