end version beta

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -313,6 +313,16 @@
        
         
     }
+
+    .menu{
+
+        &__item{
+            padding-bottom: 10px;
+           
+        }
+        
+       
+    }
 }
 
 @media screen and (min-width:1440px) {
